--- a/templates/umd-vissense.hbs
+++ b/templates/umd-vissense.hbs
@@ -3,15 +3,17 @@
 
   if (typeof define === 'function' && define.amd) {
     // AMD. Register as an anonymous module.
-    define([], function() { return factory(root, root.document); });
+    define([], function() { return function(win, doc) {
+        return factory(win, doc);
+      };
+    });
   } else if (typeof exports === 'object') {
     // Node. Does not work with strict CommonJS, but
     // only CommonJS-like environments that support module.exports,
     // like Node.
-    var jsdom = require("jsdom").jsdom;
-    var window = jsdom().parentWindow;
-
-    module.exports = factory(window, window.document);
+    module.exports = function(win, doc) {
+      factory(win, doc);
+    };
   } else {
     // Browser globals
     root.VisSense = factory(root, root.document);
